# WCSimFQTuningTools

./: .gitignore  README.md  launch_jobs.jl  pyproject.toml  requirements.txt
Angular/: README.md  compute_angular_responses.py  compute_angular_responses_new.py  fit_angular_response.py
Angular/Analysis/: angular.ipynb  angular_new.ipynb  comparisons_fits.ipynb  comparisons_responses.ipynb  responses.ipynb
Angular/old_tools/: README  TPolyFunc.cxx  TPolyFunc.h  angularResponsePlotter_v1.C  check.C  files.txt  fit_cos.C
CProfiles/: README.md  fit_cprofile_integrals.py  integrate_cprofiles.py  merge_cprofiles.py  merge_cprofiles_parallel.py  rename_files.jl
CProfiles/Analysis/: comparisons_fits.ipynb  comparisons_integrals.ipynb  comparisons_merging.ipynb  fits.ipynb  integrals.ipynb  merging.ipynb
CProfiles/Simulation/: config.jl  generate_job_files.jl  generate_macro_files.jl  (+1 more)
Charge/: README.md  create_2Dhistos_and_unhitP.py  create_2Dhistos_and_unhitP_parallel.py  create_charge_2Dhistos_and_unhitP.py  create_charge_2Dhistos_and_unhitP_parallel.py  fit_charge_pdfs.py  qbins_wcte.txt
Conversion/: README.md  conversion_factors.ipynb  get_conversion_distributions.py
STable/: README.md  STable_tools.py  compute_STable.py  compute_STable_hdf.py  compute_STable_hdf_newbining.py
Simulation/: README.md  config.jl  generate_job_files.jl  generate_macro_files.jl  generate_task_files.jl  launch_jobs.jl
Time/: README.md  compile_create_2D_histogram.sh  create_2D_histogram.cc  create_2D_histograms.py  fit_timepdf.py  fit_timepdf_hdf.py  timepdf_config.ini
(+154 files in other folders)
